<resources>
    <string name="app_name">MScreeps</string>
    <string name="enter_token">Enter your authentication token</string>
    <string name="token_text">Enter your token</string>
    <string name="save_token">Save</string>
    <string name="done_token">Done</string>
    <string name="enter_token_help">See https://docs.screeps.com/auth-tokens.html for help.</string>
    <string name="shard_selection">Shard Selection</string>
    <string-array name="shards">
        <item>shard0</item>
        <item>shard1</item>
        <item>shard2</item>
        <item>shard3</item>
    </string-array>

    <string name="tab0">Overview</string>
    <string name="tab1">Console</string>

    <string name="setting">Setting</string>

    <string name="console_prompt">&gt;</string>

    <string name="test">Test</string>
    <string name="help">Help</string>
    <string name="help_text" translatable="false">Store your object in RawMemory.segments[0] to view in Overview. &#10;eg. {cpu: 10, gcl: 5}. &#10;</string>
    <string name="loading">Loading...</string>
    <string name="no_data">(No data)</string>
</resources>
